...
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <org.odk.collect.androidshared.ui.multiclicksafe.MultiClickSafeMaterialButton
        android:id="@+id/capture_button"
        style="?widgetButtonIconQuestionWidgetStyle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/capture_image"
        android:contentDescription="@string/capture_image"
        app:icon="@drawable/ic_baseline_photo_camera_white_24"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <org.odk.collect.androidshared.ui.multiclicksafe.MultiClickSafeMaterialButton
        android:id="@+id/choose_button"
        style="?widgetButtonIconQuestionWidgetStyle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/choose_image"
        android:contentDescription="@string/choose_image"
        android:layout_marginTop="@dimen/margin_small"
...
