<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <TextView
        android:id="@+id/recording_duration"
        style="@style/TextAppearance.Collect.Headline5"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="@dimen/margin_standard"
        android:textColor="?colorPrimary"
        tools:text="00:07" />

    <org.odk.collect.android.audio.Waveform
        android:layout_marginTop="@dimen/margin_extra_small"
        android:id="@+id/waveform"
        android:layout_width="match_parent"
        android:layout_height="80dp" />

    <org.odk.collect.android.audio.AudioControllerView
        android:id="@+id/audio_controller"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />

</LinearLayout>
