...
        android:id="@+id/menu_save"
        android:icon="@drawable/ic_save_menu_24"
        android:title="@string/save_all_answers"
        app:showAsAction="always" />

    <item
        android:id="@+id/menu_goto"
        android:icon="@drawable/ic_baseline_list_24"
        android:title="@string/view_hierarchy"
        app:showAsAction="always" />

    <item
        android:id="@+id/menu_validate"
...
