...
			android:layout_height="wrap_content"
			android:text="@string/jump_to_previous"
			android:padding="12dp"
			android:textSize="16sp"
			android:layout_weight="1" />
		<Button
			android:id="@+id/jumpBeginningButton"
			android:layout_width="wrap_content"
			android:layout_height="wrap_content"
			android:text="@string/jump_to_beginning"
			android:padding="12dp"
			android:textSize="16sp"
			android:layout_weight="1" />
...
